--- a/Coursera-assignment/module3-solution/Assignment/index.html
+++ b/Coursera-assignment/module3-solution/Assignment/index.html
@@ -34,16 +34,16 @@
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav">
                      <li>
-                       <a href="index.html">
+                       <a href="#chicken">
                          <br class="hidden-xs">Chicken</a>
                          
                      </li>
                      <li id="mid">
-                       <a href="#">
+                       <a href="#beef">
                          <br class="hidden-xs">Beef</a>
                      </li>
                      <li>
-                       <a href="#">
+                       <a href="#sushi">
                          <br class="hidden-xs">Sushi</a>
                      </li>
                      
